<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EverList</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_entity">Add Entity</string>
    <string name="action_entity_definitions">Manage Entity Definitions</string>
    <string name="title_activity_entities">Manage Entities</string>
    <string name="action_entity_add">Add New</string>
    <string name="title_activity_entity_add">Add New Entity</string>
    <string name="activity_entity_add_entity_name">Name</string>
    <string name="activity_entity_add_entity_title">Title</string>
    <string name="activity_entity_add_entity_description">Description</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    
    <string name="fragment_add_choose_entity_definition">Choose Entity\'s Definition</string>

</resources>
