<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.globalmediasoft.everlist.MainActivity" >

    <item
        android:id="@+id/action_entity_definitions"
        android:orderInCategory="100"
        android:title="@string/action_entity_definitions"
        android:icon="@drawable/ic_action_collection"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_add_entity"
        android:orderInCategory="100"
        android:title="@string/action_add_entity"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"/>

</menu>