<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/edtEntityName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:hint="@string/activity_entity_add_entity_name"
	    >

        <requestFocus />
    </EditText>
    
	<EditText
	    android:id="@+id/edtEntityTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:hint="@string/activity_entity_add_entity_title"
		>
    </EditText>

	<EditText
	    android:id="@+id/edtEntityDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/activity_entity_add_entity_description"
	    android:inputType="textMultiLine" />

</LinearLayout>
